# recomendador-ecommerce

./: .dockerignore  .env.example  .gitignore  Dockerfile  MODEL_CARD.md  README.md  docker-compose.yml  dvc.yaml  metrics.json  pyproject.toml
.dvc/: config
data/processed/: .gitignore  test.parquet
data/raw/: .gitignore  events.csv.dvc
notebook/: eda.ipynb
scripts/: validate_env.py
src/recomendador/: config.py
src/recomendador/data/: feature_eng.py  loader.py  prepare.py
src/recomendador/evaluation/: evaluate.py  metrics.py
src/recomendador/models/: base.py  baseline.py  factory.py  neural.py
src/recomendador/preprocessing/: pipeline.py  preprocessors.py
src/recomendador/reports/: make_charts.py
src/recomendador/training/: promote_model.py  train.py
tests/: test_core.py
