[project]
name = "recomendador-ecommerce"
version = "0.1.0"
description = "Sistema de recomendacao de produtos para e-commerce baseado em rede neural (PyTorch)"
readme = "README.md"
requires-python = ">=3.11,<3.13"

# ----- Dependencias de PRODUCAO -----
dependencies = [
    "torch>=2.2,<3.0",
    "scikit-learn>=1.4,<2.0",
    "mlflow>=2.11,<3.0",
    "dvc>=3.48,<4.0",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<2.0",
    "pydantic-settings>=2.2,<3.0",
]

# ----- Dependencias de DESENVOLVIMENTO -----
[dependency-groups]
dev = [
    "pytest>=8.1,<9.0",
    "ruff>=0.3,<1.0",
    "pre-commit>=3.6,<4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recomendador"]

# ----- PyTorch CPU (imagem Docker mais leve e estavel) -----
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]